--- a/article_code.ipynb
+++ b/article_code.ipynb
@@ -50,6 +50,8 @@
     }
    ],
    "source": [
+    "import os\n",
+    "\n",
     "# correcting the path to include the 'women fashion' directory and listing its contents\n",
     "extraction_directory_updated = \"/teamspace/studios/this_studio/women fashion\"\n",
     "\n",
