--- a/article_code.ipynb
+++ b/article_code.ipynb
@@ -34,26 +34,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m extraction_directory_updated \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/teamspace/studios/this_studio/women fashion\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# list the files in the updated directory\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m extracted_files_updated \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241m.\u001b[39mlistdir(extraction_directory_updated)\n\u001b[1;32m      6\u001b[0m extracted_files_updated[:\u001b[38;5;241m10\u001b[39m], \u001b[38;5;28mlen\u001b[39m(extracted_files_updated)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "(['chic and elegant outfit consisting of a pair of high-waisted wide-leg trousers paired with a long-sleeve sheer lace top.jpg',\n",
+       "  'white, intricately detailed top and a flowing dark blue skirt.jpg',\n",
+       "  'black top with spaghetti straps and a black skirt adorned with a fringe detail at the hem copy.jpg',\n",
+       "  'black floral saree.jpg',\n",
+       "  'flowing green off-shoulder dress.jpg',\n",
+       "  'sparkling, fitted dress with long sleeves.jpg',\n",
+       "  'Sleeveless-Ruched-Tight-Fashion-Sexy-Bodycon-Party-Women-Club-Dresses.webp',\n",
+       "  'shiny, silver, wrap-style dress with long sleeves.jpg',\n",
+       "  'glamorous two-piece outfit featuring a sequined design.jpeg',\n",
+       "  'black top with spaghetti straps and a black skirt adorned with a fringe detail at the hem.jpg'],\n",
+       " 99)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import os\n",
     "\n",
     "# correcting the path to include the 'women fashion' directory and listing its contents\n",
-    "extraction_directory_updated = \"/teamspace/studios/this_studio/women fashion\"\n",
+    "extraction_directory_updated = \"/teamspace/studios/this_studio/ProjectIII/women_fashion\"\n",
     "\n",
     "# list the files in the updated directory\n",
     "extracted_files_updated = os.listdir(extraction_directory_updated)\n",
