Add some comments of the functions

--- a/model_testing_pytorch/model_testing.ipynb
+++ b/model_testing_pytorch/model_testing.ipynb
@@ -58,6 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Create a dict with the features for each model and metric combination\n",
     "sorted_sim_per_model = {}\n",
     "for model_name in test_models:\n",
     "    for metrics in ['cosine', 'euclidean', 'manhattan']:\n",
@@ -74,8 +75,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Rank the best recommendations for each model\n",
     "ranks = f.ranking_similarities(sorted_sim_per_model, top_n=10)\n",
     "\n",
+    "#Create a rank fusion of all individuals rankings\n",
     "final_dict = f.reciprocal_rank_fusion(ranks)"
    ]
   },
@@ -96,6 +99,7 @@
     }
    ],
    "source": [
+    "#Show the recommendations for this image\n",
     "f.plot_recommendations(final_dict, p.input_path, model_name=\"rank fusion\", top_n=3)"
    ]
   }
