Added get_encoder function to eliminate last layer of each model

--- a/model_testing_pytorch/model_testing.ipynb
+++ b/model_testing_pytorch/model_testing.ipynb
@@ -46,8 +46,8 @@
     "    #\"resnet\": (models.resnet18(pretrained=True), 224),\n",
     "    #\"alexnet\": (models.alexnet(pretrained=True), 224),\n",
     "    \"vgg16\": (models.vgg16(pretrained=True), 224),\n",
-    "    \"densenet\": (models.densenet161(pretrained=True), 224),\n",
-    "    \"inception\": (models.inception_v3(pretrained=True), 299),\n",
+    "    # \"densenet\": (models.densenet161(pretrained=True), 224),\n",
+    "    # \"inception\": (models.inception_v3(pretrained=True), 299),\n",
     "    #\"googlenet\": (models.googlenet(pretrained=True), 224),\n",
     "}"
    ]
@@ -56,7 +56,19 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'functions_model_testing' has no attribute 'get_encoder'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m metrics \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcosine\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124meuclidean\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmanhattan\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m      6\u001b[0m     model, size \u001b[38;5;241m=\u001b[39m test_models[model_name]\n\u001b[0;32m----> 7\u001b[0m     model \u001b[38;5;241m=\u001b[39m \u001b[43mf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_encoder\u001b[49m(model_name)\n\u001b[1;32m      8\u001b[0m     features \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mfeatures_extraction(model, p\u001b[38;5;241m.\u001b[39mdata_path, size\u001b[38;5;241m=\u001b[39msize)\n\u001b[1;32m      9\u001b[0m     sorted_similarities \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39msimilarity_extraction(p\u001b[38;5;241m.\u001b[39minput_path, features, method\u001b[38;5;241m=\u001b[39mmetrics)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'functions_model_testing' has no attribute 'get_encoder'"
+     ]
+    }
+   ],
    "source": [
     "#Create a dict with the features for each model and metric combination\n",
     "sorted_sim_per_model = {}\n",
@@ -64,6 +76,7 @@
     "    for metrics in ['cosine', 'euclidean', 'manhattan']:\n",
     " \n",
     "        model, size = test_models[model_name]\n",
+    "        model = f.get_encoder(model_name)\n",
     "        features = f.features_extraction(model, p.data_path, size=size)\n",
     "        sorted_similarities = f.similarity_extraction(p.input_path, features, method=metrics)\n",
     "        sorted_sim_per_model[model_name + '_' + metrics] = sorted_similarities"
