Added docstrings and the alexnet model

--- a/model_testing_pytorch/model_testing.ipynb
+++ b/model_testing_pytorch/model_testing.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "#dict with models that are going to be tested and the image size they require as a tuple (model, size) (Different models may require different image sizes)\n",
-    "test_models = ['vgg16','vit_b_16','resnet50','efficient_net_b0']"
+    "test_models = ['alexnet','vgg16','vit_b_16','resnet50','efficient_net_b0']"
    ]
   },
   {
@@ -111,23 +111,12 @@
    "source": [
     "#Create a dict with the features for each model and metric combination\n",
     "sorted_sim_per_model = {}\n",
+    "metrics = ['cosine', 'euclidean', 'manhattan']\n",
     "\n",
     "for model_name in test_models:\n",
-    "    for metrics in ['cosine', 'euclidean', 'manhattan']:\n",
-    "        sorted_similarities = f.similarity_extraction(input_path, features[model_name], method=metrics)\n",
+    "    for metric in metrics:\n",
+    "        sorted_similarities = f.similarity_extraction(input_path, features[model_name], method=metric)\n",
     "        sorted_sim_per_model[model_name + '_' + metrics] = sorted_similarities"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Define metrics to consider\n",
-    "metrics = ['cosine', 'euclidean', 'manhattan']\n",
-    "#metrics = ['euclidean']\n",
-    "#test_models = ['googlenet']"
    ]
   },
   {
